# cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json  run.js
src/: config.rs  help.rs  main.rs  output.rs  utils.rs
src/commands/: add.rs  component.rs  init.rs  layout.rs  list.rs  mod.rs  module.rs  page.rs  registry.rs  template.rs  widget.rs
src/features/: mod.rs
src/features/configs/commitlint/: commitlint.config.js.tera
src/features/configs/dockerfile/: Dockerfile.tera
src/features/configs/eslint/: eslint.config.js.tera
src/features/configs/gitlabcicd/: .gitlab-ci.yml.tera
src/features/tanstackquery/: mod.rs
src/registry/: cache.rs  client.rs  helpers.rs  mod.rs
src/scaffold/: mod.rs
src/scaffold/nextjs/: .env.example.tera  .gitignore.tera  .gitlab-ci.yml.tera  .prettierignore.tera  .prettierrc.tera  Dockerfile.tera  README.md.tera  eslint.config.js.tera  next.config.ts.tera  package.json.tera  tsconfig.json.tera
src/scaffold/pwa/: Dockerfile.tera  README.md.tera  eslint.config.js.tera  index.html.tera  package.json.tera  tsconfig.app.json.tera  vite.config.ts.tera
src/scaffold/vite/: .env.example.tera  .gitlab-ci.yml.tera  README.md.tera  eslint.config.js.tera  index.html.tera  package.json.tera  vite.config.ts.tera
src/scaffold/webview/: README.md.tera  eslint.config.js.tera  index.html.tera  package.json.tera  tsconfig.app.json.tera  tsconfig.node.json.tera  vite.config.ts.tera
tests/: cli_smoke.rs  config_test.rs  scaffold_test.rs  ux_revision_test.rs
(+79 files in other folders)
