[package]
name = "mdigitalcn-cli"
version = "0.3.2"
edition = "2024"
description = "mdigitalcn CLI - Scaffold projects and add @mdigitalcn/uikit components from GitHub"
authors = ["mdigitalcn Team"]
license = "MIT"
repository = "https://github.com/mdigitalcn/cli"
homepage = "https://github.com/mdigitalcn/cli"
keywords = ["cli", "scaffold", "react", "frontend", "codegen"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    "tests/",
    "dist/",
    ".github/",
    "*.md",
]

[workspace]

[[bin]]
name = "mdigitalcn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"

colored = "2.0"
tera = "1.0"
include_dir = "0.7"
indicatif = "0.17"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Better optimization, slower compile
strip = true             # Strip symbols from binary
panic = 'abort'          # Don't unwind on panic (smaller binary)

[profile.dev]
opt-level = 0            # Fast compilation
incremental = true       # Faster rebuilds

# Speed up dev dependency compilation
[profile.dev.package."*"]
opt-level = 1
